# pyconv

./: .gitignore  LICENSE.md  README.md  docker-compose.yml
.logs/classifier/: classifications.jsonl
.logs/whisper_pipe/: transcriptions.jsonl
audio_streamer/: audio_cfg.py  config.py  main.py  pyproject.toml
audio_streamer/services/: format_segments.py  load_audio.py  models.py  process_audio.py
classifier/: Dockerfile  config.py  main.py  pyproject.toml
classifier/eval_data/: data_gen.py  private_set.json  topic_based_set.json
classifier/services/: models.py  ollama_classifier.py
dev/: pyproject.toml
dev/my_dev_utils/: time_process.py
whisper/: main.py  pyproject.toml
whisper/services/: loader.py  transcriber.py
whisper_pipe/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
whisper_pipe/services/: models.py  process_text.py  transcriber.py
