[project]
name = "audio-streamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "packaging>=26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]

[dependency-groups]
dev = []
